--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <article>
     <h2>VISIT MY PROFILES BELOW</h2>
     <div>
-    <pre><a href="https://www.linkedin.com/in/myself-debdatta-194a822b1"><img src="https://cdn-icons-png.flaticon.com/256/174/174857.png" height="150"></a>     <a href="discord.com/users/myself_deb11"><img src="https://static.vecteezy.com/system/resources/previews/006/892/625/non_2x/discord-logo-icon-editorial-free-vector.jpg" height="146"></a> <a href="https://github.com/MyselfDebdatta"><img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" height="170"></a><a href="https://www.instagram.com/itz__debdatta?igsh=MXRydjliNmdycDFrdg=="><img src="https://img.freepik.com/premium-psd/instagram-logo-iconic-social-media-app-icon_1131634-479.jpg?semt=ais_hybrid&w=740&q=80" height="165"></a>    <a href="https://www.facebook.com/share/16nVH4Ls2G/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Logo_de_Facebook.png/1028px-Logo_de_Facebook.png" height="140"></a>
+    <pre><button><a href="https://www.linkedin.com/in/myself-debdatta-194a822b1"><img src="https://cdn-icons-png.flaticon.com/256/174/174857.png" height="150"></a></button>     <button><a href="discord.com/users/myself_deb11"><img src="https://static.vecteezy.com/system/resources/previews/006/892/625/non_2x/discord-logo-icon-editorial-free-vector.jpg" height="146"></a></button> <button><a href="https://github.com/MyselfDebdatta"><img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" height="170"></a></button><button><a href="https://www.instagram.com/itz__debdatta?igsh=MXRydjliNmdycDFrdg=="><img src="https://img.freepik.com/premium-psd/instagram-logo-iconic-social-media-app-icon_1131634-479.jpg?semt=ais_hybrid&w=740&q=80" height="165"></a></button>    <button><a href="https://www.facebook.com/share/16nVH4Ls2G/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Logo_de_Facebook.png/1028px-Logo_de_Facebook.png" height="140"></a></button>
     </pre>
     </div>
     <div>
@@ -51,7 +51,7 @@
 
         <h2>THANK YOU FOR VISITING MY PROFILE</h2>
         <h4><i>LET'S FILL THE FORM AND TELL SOMETHING ABOUT YOU AND GET CONNECTED</i></h4>
-        <h4>PERSONAL DETAILS</h4>
+        <label for="name">Your Name</label><br>
         <input type="text" placeholder="First Name">  
         <input tyoe="text" placeholder="Middle Name">    
         <input type="text" placeholder="Last Name"> <br> <br>
